--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: go
-go_import_path: github.com/ethereum/go-ethereum
+go_import_path: github.com/uvoz/go-ethereum
 sudo: false
 matrix:
   include:
@@ -60,7 +60,7 @@ matrix:
             - dput
             - fakeroot
       script:
-        - go run build/ci.go debsrc -signer "Go Ethereum Linux Builder <geth-ci@ethereum.org>" -upload ppa:ethereum/ethereum
+        - go run build/ci.go debsrc -signer "Go Ethereum Linux Builder <geth-ci@ethereum.org>" -upload ppa:ethereum/uvoz
 
     # This builder does the Linux Azure uploads
     - os: linux
@@ -155,8 +155,8 @@ matrix:
         - mv android-ndk-r17b $HOME
         - export ANDROID_NDK=$HOME/android-ndk-r17b
 
-        - mkdir -p $GOPATH/src/github.com/ethereum
-        - ln -s `pwd` $GOPATH/src/github.com/ethereum
+        - mkdir -p $GOPATH/src/github.com/uvoz
+        - ln -s `pwd` $GOPATH/src/github.com/uvoz
         - go run build/ci.go aar -signer ANDROID_SIGNING_KEY -deploy https://oss.sonatype.org -upload gethstore/builds
 
     # This builder does the OSX Azure, iOS CocoaPods and iOS Azure uploads
